Block Comments in project.scala and be easier on the parsers